--- a/src/css/style.css
+++ b/src/css/style.css
@@ -63,8 +63,6 @@ section{
     background-size: cover;
     width: 100vw;
     height: 90vh;
-
-    background-color: tomato;
 }
 
 .headerBreak-section{
@@ -140,3 +138,98 @@ section{
 .democ-title h2{
     font: bold 2rem 'Raleway', sans-serif;
 }
+
+/*titulos-section*/
+
+.titulos-section{
+    background: url(../img/stadium_bg.png) no-repeat center;
+    background-size: cover;
+    width: 100vw;
+    height: fit-content;
+}
+
+.titulos-container{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    gap: 20px;
+    margin: 10vh 0 10vh 0;
+}
+
+.titulos-text{
+    width: 53%;
+    color: white;
+}
+
+.titulos-title{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    gap: 5px;
+}
+
+.titulos-title h1{
+    font-size: 2.5rem;
+}
+
+.titulos-title span h1{
+    font-size: 7rem;
+    line-height: 4.5rem;
+}
+
+.titItems-container{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+}
+
+.titBox{
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+    width: 206px;
+    height: fit-content;
+}
+
+.titBox-content{
+    width: fit-content;
+    height: 259px;    
+    background-color: white;
+    z-index: 100;
+}
+
+.titBox-text{
+    padding: 5px;
+}
+
+.titBox-title > h1{
+    font-size: 1rem;
+}
+
+.titStick{
+    width: 5px;
+    height: 30px;
+    background-color: white;
+}
+
+.titDate > p{
+    font: bold 2rem 'Raleway', sans-serif;
+    color: white;
+}
+
+.borderShadow{
+    position: absolute;
+    right: 25px;
+    top: 25px;
+    width: 100%;
+    height: 259px;
+    border: 5px solid white;
+
+    z-index: 0;
+}
+
