--- a/src/css/style.css
+++ b/src/css/style.css
@@ -62,6 +62,11 @@ li{
     display: inline-block;
 }
 
+a{
+    text-decoration: none;
+    color: white;
+}
+
 /*formatacao padrao*/
 section{
     display: flex;
@@ -98,7 +103,21 @@ section{
     background-size: cover;
     width: 100vw;
     height: 95vh;
+
+    animation: BgZoom 4s ease-out infinite;
+    transition-duration: 1s ease-out;
 }
+
+@keyframes BgZoom {
+    0%{
+        background-size: 180vw;
+    }    
+
+    100%{
+        background-size: cover;
+    }
+}
+
 
 .header-container{
     position: relative;
